Record migration status and findings
Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>